feat: included config for existing dashboard and datasources

--- a/config/grafana/grafana.ini
+++ b/config/grafana/grafana.ini
@@ -516,13 +516,13 @@
 [smtp]
 enabled = true
 host = smtp.gmail.com:465
-user = dustinbrickwood.aws@gmail.com
+user = dutterbutterdev@gmail.com
 # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
 password = """INSERT PASSWORD"""
 ;cert_file =
 ;key_file =
 skip_verify = true
-from_address = dustinbrickwood.aws@gmail.com
+from_address = dutterbutterdev@gmail.com
 from_name = Dutterbutter
 # EHLO identity in SMTP dialog (defaults to instance_name)
 ;ehlo_identity = dashboard.example.com
