--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -12,7 +12,7 @@ alerting:
     - targets:
       - localhost:9093
 
-# TODO: make target configurable
+# TODO: make targets configurable
 scrape_configs:
   - job_name: 'prometheus'
     scrape_interval: 5s
@@ -21,12 +21,12 @@ scrape_configs:
   - job_name: 'substrate_node'
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:9615']
+      - targets: ['3.21.241.151:9615']
   - job_name: "node_exporter"
     scrape_interval: 5s
     static_configs:
-      - targets: ["localhost:9100"]
+      - targets: ["3.21.241.151:9100"]
   - job_name: "process-exporter"
     scrape_interval: 5s
     static_configs:
-      - targets: ["localhost:9256"]
+      - targets: ["3.21.241.151:9256"]
