--- a/modules/alertmanager/cloud.conf
+++ b/modules/alertmanager/cloud.conf
@@ -31,8 +31,6 @@ write_files:
       
         location / {
           proxy_pass http://localhost:9093;
-          auth_basic "Restricted Content";
-          auth_basic_user_file /etc/nginx/.htpasswd;
         }
       }
  
@@ -55,7 +53,7 @@ write_files:
         alertmanager:
           image: prom/alertmanager:latest
           volumes:
-            - /home/ubuntu/config/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+            - /home/ubuntu/config/alertmanager:/etc/alertmanager/
           ports:
             - 9093:9093
           command:
