--- a/modules/grafana/cloud.conf
+++ b/modules/grafana/cloud.conf
@@ -42,7 +42,7 @@ write_files:
         grafana:
           image: grafana/grafana
           volumes:
-            - /home/ubuntu/config/grafana/grafana.ini:/etc/grafana/grafana.ini
+            - /home/ubuntu/config/grafana:/etc/grafana/
             - /home/ubuntu/config/grafana/provisioning:/etc/grafana/provisioning
             - /home/ubuntu/config/grafana/dashboards:/var/lib/grafana/dashboards
           ports:
