--- a/modules/prometheus/cloud.conf
+++ b/modules/prometheus/cloud.conf
@@ -2,7 +2,6 @@
 package_update: true
 package_upgrade: true
 
-
 apt:
   sources:
     certbot:
@@ -56,7 +55,7 @@ write_files:
         prometheus:
           image: prom/prometheus:latest
           volumes:
-            - /home/ubuntu/config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+            - /home/ubuntu/config/prometheus:/etc/prometheus
             - /home/ubuntu/config/prometheus/rules.yml:/etc/prometheus/rules.yml
             - prometheus-data:/prometheus
           ports:
