--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -20,10 +20,12 @@ scrape_configs:
       - targets: ['localhost:9090']
   - job_name: 'substrate_node'
     scrape_interval: 5s
+    metrics_path: "/metrics"
     static_configs:
-      - targets: ['localhost:9615']
+      - targets: ['localhost:9619']
   - job_name: "node_exporter"
     scrape_interval: 5s
+    metrics_path: "/metrics"
     static_configs:
       - targets: ["localhost:9100"]
   - job_name: "process-exporter"
